--- a/components/fliptime/flipdown.css
+++ b/components/fliptime/flipdown.css
@@ -1,39 +1,25 @@
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  perspective: 1000px;
-}
 
-.flip-card-inner {
+
+
+.filp-container {
+  border: 1px solid gray;
+  height: 200px;
+  width: 200px;
   position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  perspective: 600px;
+  /*margin: 0 auto 60px;*/
 }
 
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #2980b9;
+.flip-front {
+  background: none repeat scroll 0 0 red;
   color: white;
-  transform: rotateY(180deg);
+  opacity: 0.7;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.flip-Forward {
+  transition: transform 0.6s;
+  transform:rotate3d(1, 0, 0, -80deg)
 }
